--- a/nfe_import/static/description/index.html
+++ b/nfe_import/static/description/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE HTML>
-<meta charset="utf-8" />
+<meta charset="utf-8"/>
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan">Importação de NF-e Automática - Trustcode</h2>
-            <h3 class="oe_slogan">TrustCode - Criando códigos confiáveis</h3>
+            <h2 class="oe_slogan">Importação de NF-e Automática</h2>3>
         </div>
         <div class="oe_span6">
             <div class="oe_demo oe_picture oe_screenshot">
                 <a href="https://github.com/odoo-brazil">
                     <img src="/nfe_import/static/src/img/nfe_import.png">
-                </a>                
+                </a>
             </div>
         </div>
         <div class="oe_span6">
             <p class="oe_mt32">
-            	Importação automática do XML da NF-e	
-           	</p>            
+                Importação automática do XML da NF-e
+            </p>
         </div>
     </div>
 </section>
